adding new changes

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/footer.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
 		<link rel='shortcut icon' type='images/favicon' href="images/favicon.ico" />
-		<title>TEDxRIT | About</title>
+		<title>TEDxEkamaiIntlSchool | About</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="js/main.js"></script>
 		<script>
@@ -34,7 +34,7 @@
 						<a href="about.html" class="link">ABOUT</a>
                         <a href="speakers.html" class="link">SPEAKERS</a>
 						<a href="sponsor.html" class="link">SPONSORS</a>
-						<a href="team.html" class="link">TEDxRIT 2016</a>
+						<a href="team.html" class="link">TEDxEkamaiIntlSchool 2016</a>
 						<a href="#sectionCont" class="link">CONTACT</a>
 					</div>
 				</div>
@@ -47,7 +47,10 @@
 			<div class="content">
 				<div class="title">TEDxEkamaiIntlSchool</div>
 				<div class="text">TEDxEkamaiIntlSchool started as an idea. A small group of students wanted to make a difference and start conversations on campus. Fast forward two years later. We now have excellent engagement and, with the help of twenty dedicated students, are planning our second annual event. We pride ourselves on being diverse, unique, and as inclusive as possible to all ideas and people. TEDxEkamaiIntlSchool is for the students, by the students, and as our club continues to grow and become more successful, we will never forget why we started and what we strive for.
-					<br /><br />In the spirit of “ideas worth spreading,” TED granted our club a license to hold our very own TEDx event. Featuring a combination of live speakers and performances, our goal is to spark deep discussions and connections within our forward thinking community. TEDxRIT embraces the pillars that RIT stands on, celebrating the diversity of our community through engaging students and faculty in groundbreaking conversation.</div>
+					<br /><br />In the spirit of "ideas worth spreading," TED granted our club a license to hold our very own Youth TEDx Event, 
+featuring a combination of live speakers and performances. Our goal is to spark in-depth discussions and connections within our forward-thinking community. 
+TEDxEkamaiIntlSchool embraces the pillars that EIS stands on, 
+celebrating the diversity of our community by engaging students and faculty in groundbreaking conversations. </div>
 			</div>
 		</div>
 
@@ -59,7 +62,7 @@
 						<div class="title">TEDx</div>
 						<div class="subtitle">x = independently organized event</div>
 					</div>
-					<div class="text">In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. Our event is called TEDxRIT, where x = independently organized TED event. At our TEDxRIT event, TEDTalks video and live speakers will combine to spark deep discussion and connection in a small group. The TED Conference provides general guidance for the TEDx program, but individual TEDx events, including ours, are self-organized.</div>
+					<div class="text">In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. Our event is called TEDxEkamaiIntlSchool, where x = independently organized TED event. At our TEDxEkamaiIntlSchool event, TEDTalks video and live speakers will combine to spark deep discussion and connection in a small group. The TED Conference provides general guidance for the TEDx program, but individual TEDx events, including ours, are self-organized.</div>
 				</div>
 			</div>
 		</div>
