adding tedxeis changes

--- a/speakerApp.html
+++ b/speakerApp.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
 		<link rel='shortcut icon' type='images/favicon' href="images/favicon.ico" />
-		<title>TEDxRIT - Find Your X</title>
+		<title>TEDxEkamaiIntlSchool - Find Your X</title>
 	</head>
 
 	<body>
