--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/footer.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
 		<link rel='shortcut icon' type='images/favicon' href="images/favicon.ico" />
-		<title>TEDxRIT | Committees</title>
+		<title>TEDxEkamaiIntlSchool | Committees</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="js/main.js"></script>
 		<script>
