adding tedx changes

--- a/speakers.html
+++ b/speakers.html
@@ -207,7 +207,7 @@
 						<a href="about.html" class="link">ABOUT</a>
                         <a href="speakers.html" class="link">SPEAKERS</a>
 						<a href="sponsor.html" class="link">SPONSORS</a>
-						<a href="team.html" class="link">TEDxRIT 2016</a>
+						<a href="team.html" class="link">TEDxEkamaiInternationalSchool 2016</a>
 						<a href="#sectionCont" class="link">CONTACT</a>
 					</div>
 				</div>
