--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 							<a href="about.html" class="link">ABOUT</a>
 							<a href="speakers.html" class="link">SPEAKERS</a>
 							<a href="sponsor.html" class="link">SPONSORS</a>
-							<a href="team.html" class="link">TEDxEkamaiIntlSchool 2016</a>
+							<a href="team.html" class="link">2016 Event</a>
 							<a href="#sectionCont" class="link">CONTACT</a>
 						</div>
 					</div>
