--- a/sponsor.html
+++ b/sponsor.html
@@ -34,7 +34,7 @@
 						<a href="about.html" class="link">ABOUT</a>
                         <a href="speakers.html" class="link">SPEAKERS</a>
 						<a href="sponsor.html" class="link">SPONSORS</a>
-						<a href="team.html" class="link">TEDxEkamaiInternationalSchool 2016</a>
+						<a href="team.html" class="link">2016 Event</a>
 						<a href="#sectionCont" class="link">CONTACT</a>
 					</div>
 				</div>
