adding speaker changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					var popup = '.pop-up-' + num;
 					$(popup).hide();
 				}
-				$('.brandon-dcruz').click(function(){
+				$('.prin-lao').click(function(){
 			        $('.pop-up-1').show();
 			        $('.wrapper').css('opacity', '0.2');
                     $('body').addClass('clicked');
@@ -40,7 +40,7 @@
 
 
 
-				$('.ly-marlow').click(function(){
+				$('.joan-yee').click(function(){
 			        $('.pop-up-2').show();
 			        $('.wrapper').css('opacity', '0.2');
                     $('body').addClass('clicked');
@@ -54,7 +54,7 @@
 
 
 
-				$('.michael-geffert').click(function(){
+				$('.taskin-haque').click(function(){
 			        $('.pop-up-3').show();
 			        $('.wrapper').css('opacity', '0.2');
                     $('body').addClass('clicked');
@@ -150,8 +150,8 @@
 			<span>x</span>
 			<div class="pop-up-text">
 				<div class="flex-container">
-					<h1>Brandon Dcruz</h1>
-					<img class="img-1" src="images/speakers/BrandonDcruz.jpg" alt="image one" />
+					<h1>Prin Laomanutsak</h1>
+					<img class="img-1" src="images/speakers/PrinLao.jpg" alt="image one" />
                 	<h1>Cocaine Train Tracks: A Kid, Music, and Antidepressants</h1>
 					<h2>A personal story about depression, creativity, identity, and growing up.</h2>
 				</div>
@@ -163,8 +163,8 @@
 			<span>x</span>
 			<div class="pop-up-text">
 				<div class="flex-container">
-					<h1>LY Marlow</h1>
-					<img class="img-2" src="images/speakers/LYMarlow.jpg" alt="image two" />
+					<h1>Joan Yee</h1>
+					<img class="img-2" src="images/speakers/JoanYee.png" alt="image two" />
                     <h1>Why You Should Have the Courage to Embrace Your Passion</h1>
 					<h2>If given an opportunity to live with passion and purpose, despite your fears and risks, will YOU do it?</h2>
 				</div>
@@ -176,65 +176,14 @@
 			<span>x</span>
 			<div class="pop-up-text">
 				<div class="flex-container">
-					<h1>Michael Geffert</h1>
-                    <img class="img-3" src="images/speakers/MichaelGeffert.jpg" alt="image three" />
+					<h1>Taskin Haque</h1>
+                    <img class="img-3" src="images/speakers/TaskinHaque.png" alt="image three" />
                     <h1>How Do Magicians Fool Us?</h1>
 					<h2>The simple secrets and methods magicians use to trick us into believing what seems to be impossible.</h2>
 				</div>
 			</div>
 		</div>
 
-		<!--Pop Up Details # 4-->
-		<div class="pop-up-4">
-			<span>x</span>
-			<div class="pop-up-text">
-				<div class="flex-container">
-					<h1>Shima Ghaheri</h1>
-					<img src="images/speakers/ShimaGhaheri.JPG" alt="image four" />
-					<h1>Design Vs. War</h1>
-					<h2>Protecting war-traumatized children by designing modular system of games and toys</h2>
-				</div>
-			</div>
-		</div>
-
-		<!--Pop Up Details # 5-->
-        <div class="pop-up-5">
-			<span>x</span>
-			<div class="pop-up-text">
-				<div class="flex-container">
-					<h1>Skip Flanagan</h1>
-					<img src="images/speakers/SkipFlanagan.jpg" alt="image five" />
-					<h1>Go Deaf: Turning A Deaf Ear to the Naysayers</h1>
-					<h2>A deeper look into the phrase 'going deaf', and how it is applicable to all aspects of life...and how to apply it to yourself​.</h2>
-				</div>
-			</div>
-		</div>
-
-		<!--Pop Up Details # 6-->
-		<div class="pop-up-6">
-			<span>x</span>
-			<div class="pop-up-text">
-				<div class="flex-container">
-					<h1>Suhail Prasathong</h1>
-					<img src="images/speakers/SuhailPrasathong.png" alt="image five" />
-					<h1> The Privileged Immigrant</h1>
-					<h2>How a heartbreaking story about immigration unearthed the concept of a privileged immigrant.</h2>
-				</div>
-			</div>
-		</div>
-
-		<!--Pop Up Details # 7-->
-		<div class="pop-up-7">
-			<span>x</span>
-			<div class="pop-up-text">
-				<div class="flex-container">
-					<h1>Gary Stine</h1>
-					<img src="images/speakers/garystine.png" alt="image seven" />
-					<h1>Welcome to We</h1>
-					<h2>Why we hide in plain site when we speak in public, and how we can move beyond hiding toward a more useful model.</h2>
-				</div>
-			</div>
-		</div>
 
 		<!--The first section of the Home page. Houses the main site navigation.-->
 		<div class="wrapper">
@@ -247,14 +196,15 @@
 							<a href="about.html" class="link">ABOUT</a>
 							<a href="speakers.html" class="link">SPEAKERS</a>
 							<a href="sponsor.html" class="link">SPONSORS</a>
-							<a href="team.html" class="link">2016 Event</a>
+							<a href="team.html" class="link">2016 EVENT</a>
+						    <a href="signup.html" class="link">TICKETS</a>							
 							<a href="#sectionCont" class="link">CONTACT</a>
 						</div>
 					</div>
 					<div class="hero-center">
 						<div class="hero-title">Diverse Minds</div>
 	                    <!--<div class="countdown-title" id="countdown"></div>-->
-						<a href="#sectionDown" class="button">LEARN MORE</a>
+						<a href="signup.html" class="button">BUY TICKETS NOW!</a>
 					</div>
 				</div>
 			</div>
@@ -265,6 +215,7 @@
 					<div class="about-left">
 						<div class="date">25.3.19</div>
 						<div class="title right-align">Milne Auditorium</div>
+						<div class="title right-align">Ekamai International School</div>
 					</div>
 					<div class="about-right">
 						<div class="text">Diversity of thoughts breeds great thinkers. <br /><br />With the hope that our audience comes to TEDxEkamaiIntlSchool 2018 with an open mind, our goal is to challenge the preconceived notions some may carry with them and inspire them to greater heights.</div>
@@ -278,13 +229,9 @@
 				<div class="page-wrapper">
 	                <div class="title space">Speakers</div>
 					<div class="speaker-grid">
-	                    <div class="speaker brandon-dcruz"></div>
-	                    <div class="speaker ly-marlow"></div>
-	                    <div class="speaker michael-geffert"></div>
-	                    <div class="speaker shima-ghaheri"></div>
-	                    <div class="speaker skip-flanagan"></div>
-                        <div class="speaker suhail-prasathong"></div>
-						<div class="speaker gary-stine"></div>
+	                    <div class="speaker prin-lao"></div>
+	                    <div class="speaker joan-yee"></div>
+	                    <div class="speaker taskin-haque"></div>
 	                </div>
 				</div>
 			</div>
