--- a/speakers.html
+++ b/speakers.html
@@ -117,8 +117,8 @@
 			<span>x</span>
 			<div class="pop-up-text">
 				<div class="flex-container">
-					<h1>Brandon Dcruz</h1>
-					<img class="img-1" src="images/speakers/BrandonDcruz.jpg" alt="image one" />
+					<h1>Prin Laomanutsak</h1>
+					<img class="img-1" src="images/speakers/PrinLao.jpg" alt="image one" />
 					<p>Brandon Dcruz is a second-year undergraduate at The School of Individualized Studies at RIT. Musician, writer, composer, poet, actor, comedian, record label CEO, Facebook poker, and creator are just a few titles Brandon uses daily. At 19, Brandon is currently creating his own degree out of music, film, writing, video game design, and software engineering. He is the Literature Team Lead for Signatures, the award-winning Literary and Arts Magazine on campus, organizing a team to curate a yearly edition of a published work. He is the lead drummer for the RIT Jazz Ensemble. He composes musical scores for SOFA projects. He participates in slam poetry and open mics. On top of this, Brandon runs an independent record label called The Reading Room, working with a team of over twenty artists, web developers, A&R managers, and musicians to promote talent from around the world, often producing, managing, and Skyping artists directly.<br/><br />Named after the small town he grew up in, Brandon creates music as Altona Meadows using guitars, drums, pianos, vibraphones, and whatever else he can "borrow" from the music room. He drinks black coffee, reads Kurt Vonnegut, collects records, and is very excited to share his story with the world.<br /><br />Check out his record label here <a href="http://www.readingroommusic.com/">http://www.readingroommusic.com/</a> and listen to his music here <a href="https://soundcloud.com/altonameadows">https://soundcloud.com/altonameadows</a></p>
 				</div>
 			</div>
@@ -148,53 +148,7 @@
 			</div>
 		</div>
 
-		<!--Pop Up Details # 4-->
-		<div class="pop-up-4">
-			<span>x</span>
-			<div class="pop-up-text">
-				<div class="flex-container">
-					<h1>Shima Ghaheri</h1>
-					<img src="images/speakers/ShimaGhaheri.JPG" alt="image four" />
-					<p>Graduate Student at The Rochester Institute of Technology<br /><br />Shima was born and raised in Tehran, Iran. She started her journey to become a designer by making her own toys with recyclable materials in her uncle’s basement during pre-school summers. These childhood memories later inspired her to obtain a Bachelor of Arts in Industrial Design from the University of Art, where she was ranked first in the program. Pursuing her passion to become a professional product designer, she is now in her second year of MFA Industrial Design at the Rochester Institute of Technology. More recently, she started working at Hasbro, the toy design company, as a product design intern. Throughout her career as a designer, many of her childhood dreams have come true; this time, however, Shima embarks on a challenging and exciting journey to leverage her expertise to realize the dreams of the children living in war zones.<br /><br />More can be found at: <a href="http://shimaghaheri.com/">http://shimaghaheri.com/</a></p>
-				</div>
-			</div>
-		</div>
-
-		<!--Pop Up Details # 5-->
-		<div class="pop-up-5">
-			<span>x</span>
-			<div class="pop-up-text">
-				<div class="flex-container">
-					<h1>Skip Flanagan</h1>
-					<img src="images/speakers/SkipFlanagan.jpg" alt="image five" />
-					<p>A Boston native, Flanagan was an Under Armour Preseason All-American and Perfect Game Preseason All-American in high school. He went on to play collegiate baseball for here at RIT, becoming the first ever deaf captain in program history. After leading his team to the Liberty League Championship game, Flanagan signed a professional contract to play for the Old Orchard Beach Surge in Maine. Flanagan retired from competitive baseball after a brief tenure in the California Winter League and went back to education. Flanagan graduated from RIT with a degree in Psychology with a minor in exercise science in 2016, and a master's from the University of Washington’s Intercollegiate Athletic Leadership program in 2017. Flanagan is currently in his second year working as the NTID Athlete Development Program Coordinator, overseeing a support service program for NTID supported student-athletes at the varsity level here at RIT while taking on multiple roles in different departments across campus. Ever since he took over, the NTID Athlete Development Program has averaged at least a 3.0 GPA every semester, increased the number of student-leaders across teams, organizations, and in the community. During Flanagan's tenure, the NTID Athlete Development Program had NTID athletes win the following titles: Liberty League Performer of the Week, RIT Student-Athlete of the Week, Jan Strine Award, NCAA All-American, Liberty League All-Academic Award, and set multiple school records.</p>
-				</div>
-			</div>
-		</div>
-
-		<!--Pop Up Details # 6-->
-		<div class="pop-up-6">
-			<span>x</span>
-			<div class="pop-up-text">
-				<div class="flex-container">
-					<h1>Suhail Prasathong</h1>
-					<img class="img-6" src="images/speakers/SuhailPrasathong.png" alt="image five" />
-					<p>Suhail Prasathong was born and raised in Bangkok, Thailand. He moved to the United States at the age of 18 in search of greater things such as higher education and opportunities. By age 18 he had traveled to more than 18 countries which exposed him to a wealth of experiences at an early age. His journey kicked off at Monroe Community College in Rochester, NY where he pursued an Associate in Computer Engineering. In his time at MCC, he served as President of the Student Government where he had the opportunity to engage with students from all walks of life. That experience changed his entire worldview. Suhail went on to the Rochester Institute of Technology to pursue a Bachelor's Degree in Computer Engineering and continues to speak on issues he cares about at national conferences, local community events and beyond.</p>
-				</div>
-			</div>
-		</div>
-
-		<!--Pop Up Details # 7-->
-		<div class="pop-up-7">
-			<span>x</span>
-			<div class="pop-up-text">
-				<div class="flex-container">
-					<h1>Gary Stine</h1>
-					<img class="img-7" src="images/speakers/garystine.png" alt="image seven" />
-					<p>Gary started his career as a professional actor, and has used this experience for the past two decades, working with leadership at top Fortune 500 companies as their personal and professional confidant. He also has taught specialized interviewing and public speaking classes at Skidmore College. What drives him - whether working with students or CEO's - is a desire to help improve their leadership abilities, strengthen speaking skills and increase their productivity. His work has been featured on both radio and television, and is the author of two books focused on personal and professional development.</p>
-				</div>
-			</div>
-		</div>
+	
 
 		<!--The first section of the Speakers page. Houses the main image and page title as well as the main site navigation.-->
         <div class="wrapper">
@@ -208,6 +162,7 @@
                         <a href="speakers.html" class="link">SPEAKERS</a>
 						<a href="sponsor.html" class="link">SPONSORS</a>
 						<a href="team.html" class="link">2016 Event</a>
+						<a href="signup.html" class="link">TICKETS</a>						
 						<a href="#sectionCont" class="link">CONTACT</a>
 					</div>
 				</div>
@@ -221,7 +176,7 @@
 				<div class="row">
 					<div class="left">
 						<div class="content-container">
-							<div class="title">Brandon Dcruz</div>
+							<div class="title">Prin Laomanutsak</div>
 							<div class="text">Brandon Dcruz is a second-year undergraduate at The School of Individualized Studies at RIT. Musician, writer, composer, poet, actor, comedian, record label CEO, Facebook poker, and creator are just a few titles Brandon uses daily.</div>
                             <div class="button first">READ MORE</div>
 						</div>
@@ -237,7 +192,7 @@
 					</div>
 					<div class="right">
 						<div class="content-container">
-							<div class="title">LY Marlow</div>
+							<div class="title">Joan Yee</div>
 							<div class="text">Having grown up in a drug- and crime-infested project in Philadelphia, a product of teen pregnancy, who escaped an unspeakable abusive relationship and then put herself through sixteen years of night school (sometimes with baby in tow) to earn multiple degrees including an MBA, L.Y. Marlow’s story would be notable enough given her tenacity to shatter the status quo.</div>
                             <div class="button second">READ MORE</div>
 						</div>
@@ -247,7 +202,7 @@
 				<div class="row">
 					<div class="left">
 						<div class="content-container">
-							<div class="title">Michael Geffert</div>
+							<div class="title">Taskin Haque</div>
 							<div class="text">Michael is a magician and performer from Rochester, New York. He is in his first year at Rochester Institute of Technology pursuing a degree in software engineering.</div>
                             <div class="button third">READ MORE</div>
 						</div>
@@ -257,57 +212,6 @@
 					</div>
 				</div>
 
-				<div class="row">
-					<div class="left">
-						<div class="img four"></div>
-					</div>
-					<div class="right">
-						<div class="content-container">
-							<div class="title">Shima Ghaheri</div>
-							<div class="text">Shima was born and raised in Tehran, Iran. She started her journey to become a designer by making her own toys with recyclable materials in her uncle’s basement during pre-school summers.</div>
-                            <div class="button fourth">READ MORE</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="left">
-						<div class="content-container">
-							<div class="title">Skip Flannagan</div>
-							<div class="text">A Boston native, Flanagan was an Under Armour Preseason All-American and Perfect Game Preseason All-American in high school.</div>
-                            <div class="button fifth">READ MORE</div>
-						</div>
-					</div>
-					<div class="right">
-						<div class="img five"></div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="left">
-						<div class="img six"></div>
-					</div>
-					<div class="right">
-						<div class="content-container">
-							<div class="title">Suhail Prasathong</div>
-							<div class="text">Suhail Prasathong was born and raised in Bangkok, Thailand. He moved to the United States at the age of 18 in search of greater things such as higher education and opportunities.</div>
-							<div class="button sixth">READ MORE</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="left">
-						<div class="content-container">
-							<div class="title">Gary Stine</div>
-							<div class="text">Gary Stine is founder and principal of Spoken Word Solutions, an executive coaching and public performance agency.</div>
-							<div class="button seventh">READ MORE</div>
-						</div>
-					</div>
-					<div class="right">
-						<div class="img seven"></div>
-					</div>
-				</div>
 
 
 			</div>
