--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 			<div class="page-wrapper" id="sectionDown">
 				<div class="about-container">
 					<div class="about-left">
-						<div class="date">25.3.19</div>
+						<div class="date">25.3.19 | 3PM</div>
 						<div class="title right-align">Milne Auditorium</div>
 						<div class="title right-align">Ekamai International School</div>
 					</div>
