--- a/sponsor.html
+++ b/sponsor.html
@@ -49,9 +49,9 @@
 				<div class="row">
 					<div class="left">
 						<div class="content-container">
-							<div class="title">RIT Alumni Relations</div>
-							<div class="text">The RIT Alumni Association proudly supports nearly 121,000 RIT alumni that live and work around the world. Our dedicated staff and alumni volunteers help manage more than 30 RIT Alumni Association chapters. Our goal is help you connect with each other and RIT through community, sporting and educational events.</div>
-							<a href="http://www.rit.edu/alumni/" class="button">LEARN MORE</a>
+							<div class="title">N/A</div>
+							<div class="text"></div>
+							<a href="" class="button">LEARN MORE</a>
 						</div>
 					</div>
 					<div class="right">
