--- a/speakers.html
+++ b/speakers.html
@@ -119,7 +119,7 @@
 				<div class="flex-container">
 					<h1>Prin Laomanutsak</h1>
 					<img class="img-1" src="images/speakers/PrinLao.jpg" alt="image one" />
-					<p>Brandon Dcruz is a second-year undergraduate at The School of Individualized Studies at RIT. Musician, writer, composer, poet, actor, comedian, record label CEO, Facebook poker, and creator are just a few titles Brandon uses daily. At 19, Brandon is currently creating his own degree out of music, film, writing, video game design, and software engineering. He is the Literature Team Lead for Signatures, the award-winning Literary and Arts Magazine on campus, organizing a team to curate a yearly edition of a published work. He is the lead drummer for the RIT Jazz Ensemble. He composes musical scores for SOFA projects. He participates in slam poetry and open mics. On top of this, Brandon runs an independent record label called The Reading Room, working with a team of over twenty artists, web developers, A&R managers, and musicians to promote talent from around the world, often producing, managing, and Skyping artists directly.<br/><br />Named after the small town he grew up in, Brandon creates music as Altona Meadows using guitars, drums, pianos, vibraphones, and whatever else he can "borrow" from the music room. He drinks black coffee, reads Kurt Vonnegut, collects records, and is very excited to share his story with the world.<br /><br />Check out his record label here <a href="http://www.readingroommusic.com/">http://www.readingroommusic.com/</a> and listen to his music here <a href="https://soundcloud.com/altonameadows">https://soundcloud.com/altonameadows</a></p>
+					<p></p>
 				</div>
 			</div>
 		</div>
@@ -130,8 +130,8 @@
 			<div class="pop-up-text">
 				<div class="flex-container">
 					<h1>LY Marlow</h1>
-					<img class="img-2" src="images/speakers/LYMarlow.jpg" alt="image two" />
-					<p>Having grown up in a drug- and crime-infested project in Philadelphia, a product of teen pregnancy, who escaped an unspeakable abusive relationship and then put herself through sixteen years of night school (sometimes with baby in tow) to earn multiple degrees including an MBA, L.Y. Marlow’s story would be notable enough given her tenacity to shatter the status quo. But it would be her courageous decision to step down from a promising 20+ year corporate career to found Saving Promise—a national domestic violence prevention nonprofit inspired by five generations of mothers and daughters in her family that survived more than sixty years of domestic violence, including her granddaughter, a little girl named Promise. Key to the Saving Promise’s vision is a collaboration with the Harvard T.H. Chan School of Public Health to launch one of the first of its kind research and development Learning Labs to put forth innovative, evidence-based public education and preventions strategies to prevent intimate partner violence. This heartfelt and captivating story of tragedy to triumph moved L.Y. to share her journey in her memoir: ‘Don’t Look at the Monster: One Woman’s Journey to Embrace a Purposeful Life—the Gifts, the Lessons & the Blessings’. L.Y. is a dedicated and sought-after media talent, lecturer and spokeswoman for domestic violence prevention and women empowerment. Her authentic voice as a survivor, mother and friend—an ordinary woman with an extraordinary story—is a testament to the transformative power to embrace one’s passion, purpose and power.<br /><br />L.Y. Marlow is the Founder & CEO, Saving Promise; Founder of MonsteRise (a new women empowerment brand); and the award-winning author of Color Me Butterfly, A Life Apart and Don’t Look at the Monster. Follow her @lymarlow.</p>
+					<img class="img-2" src="images/speakers/JoanYee.png" alt="image two" />
+					<p>.</p>
 				</div>
 			</div>
 		</div>
@@ -142,8 +142,8 @@
 			<div class="pop-up-text">
 				<div class="flex-container">
 					<h1>Michael Geffert</h1>
-					<img class="img-3" src="images/speakers/MichaelGeffert.jpg" alt="image three" />
-					<p>Michael is a magician and performer from Rochester, New York. He is in his first year at Rochester Institute of Technology pursuing a degree in software engineering. He has performed magic shows in groups as small as a few people and as large as a full auditorium. He has experience in a variety of different forms of magic, such as mentalism and cardistry. He has viewed and studied the works of magicians like Criss Angel, David Blane, and David Copperfield and has spent extensive time dissecting the specific characteristics that make up a convincing magic performance.</p>
+					<img class="img-3" src="images/speakers/taskinhaque.png" alt="image three" />
+					<p></p>
 				</div>
 			</div>
 		</div>
@@ -160,7 +160,6 @@
 					<div class="links">
 						<a href="about.html" class="link">ABOUT</a>
                         <a href="speakers.html" class="link">SPEAKERS</a>
-						<a href="sponsor.html" class="link">SPONSORS</a>
 						<a href="team.html" class="link">2016 Event</a>
 						<a href="signup.html" class="link">TICKETS</a>						
 						<a href="#sectionCont" class="link">CONTACT</a>
@@ -177,7 +176,8 @@
 					<div class="left">
 						<div class="content-container">
 							<div class="title">Prin Laomanutsak</div>
-							<div class="text">Brandon Dcruz is a second-year undergraduate at The School of Individualized Studies at RIT. Musician, writer, composer, poet, actor, comedian, record label CEO, Facebook poker, and creator are just a few titles Brandon uses daily.</div>
+							<div class="text">"If I have seen further, it is by standing on the shoulders of giants." - Isaac Newton. To me, this is exactly what law is; discovery upon previous discoveries. I believe that a strong foundation of society is a robust legal system that bridge the gap between policy and implementation. I study law to understand the society and practice it to be empowered with the authority to, in essence, make the better society in my capability.</div>
+
                             <div class="button first">READ MORE</div>
 						</div>
 					</div>
@@ -193,7 +193,9 @@
 					<div class="right">
 						<div class="content-container">
 							<div class="title">Joan Yee</div>
-							<div class="text">Having grown up in a drug- and crime-infested project in Philadelphia, a product of teen pregnancy, who escaped an unspeakable abusive relationship and then put herself through sixteen years of night school (sometimes with baby in tow) to earn multiple degrees including an MBA, L.Y. Marlow’s story would be notable enough given her tenacity to shatter the status quo.</div>
+							<div class="text">Joan Yee is the Education Sector Advisor for Titan with a track record of managing and investing in education companies.
+
+							In addition to driving large, established education companies across Asia, Ms. Yee is also a serial entrepreneur.  She has founded companies not only in the education space, but also in the F&B and events management sectors.</div>
                             <div class="button second">READ MORE</div>
 						</div>
 					</div>
@@ -203,7 +205,7 @@
 					<div class="left">
 						<div class="content-container">
 							<div class="title">Taskin Haque</div>
-							<div class="text">Michael is a magician and performer from Rochester, New York. He is in his first year at Rochester Institute of Technology pursuing a degree in software engineering.</div>
+							<div class="text">.</div>
                             <div class="button third">READ MORE</div>
 						</div>
 					</div>
