--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
 
-				$('.shima-ghaheri').click(function(){
+				$('.anas-brt').click(function(){
 			        $('.pop-up-4').show();
 			        $('.wrapper').css('opacity', '0.2');
                     $('body').addClass('clicked');
@@ -178,6 +178,15 @@
 			</div>
 		</div>
 
+		<div class="pop-up-4">
+			<span>x</span>
+			<div class="pop-up-text">
+				<div class="flex-container">
+					<h1>Anas Brt</h1>
+                    <img class="img-4" src="images/speakers/AnasBrt.png" alt="image four" />
+				</div>
+			</div>
+		</div>
 
 		<!--The first section of the Home page. Houses the main site navigation.-->
 		<div class="wrapper">
@@ -225,6 +234,7 @@
 	                    <div class="speaker prin-lao"></div>
 	                    <div class="speaker joan-yee"></div>
 	                    <div class="speaker taskin-haque"></div>
+	                    <div class="speaker anas-brt"></div>
 	                </div>
 				</div>
 			</div>
