--- a/speakers.html
+++ b/speakers.html
@@ -129,7 +129,7 @@
 			<span>x</span>
 			<div class="pop-up-text">
 				<div class="flex-container">
-					<h1>LY Marlow</h1>
+					<h1>Joan Yee</h1>
 					<img class="img-2" src="images/speakers/JoanYee.png" alt="image two" />
 					<p>.</p>
 				</div>
@@ -141,14 +141,23 @@
 			<span>x</span>
 			<div class="pop-up-text">
 				<div class="flex-container">
-					<h1>Michael Geffert</h1>
-					<img class="img-3" src="images/speakers/taskinhaque.png" alt="image three" />
+					<h1>Taskin Haque</h1>
+					<img class="img-3" src="images/speakers/TaskinHaque.png" alt="image three" />
 					<p></p>
 				</div>
 			</div>
 		</div>
 
-	
+		<div class="pop-up-4">
+			<span>x</span>
+			<div class="pop-up-text">
+				<div class="flex-container">
+					<h1>Anas Brt</h1>
+					<img class="img-4" src="images/speakers/AnasBrt.png" alt="image four" />
+					<p></p>
+				</div>
+			</div>
+		</div>	
 
 		<!--The first section of the Speakers page. Houses the main image and page title as well as the main site navigation.-->
         <div class="wrapper">
@@ -177,8 +186,6 @@
 						<div class="content-container">
 							<div class="title">Prin Laomanutsak</div>
 							<div class="text">"If I have seen further, it is by standing on the shoulders of giants." - Isaac Newton. To me, this is exactly what law is; discovery upon previous discoveries. I believe that a strong foundation of society is a robust legal system that bridge the gap between policy and implementation. I study law to understand the society and practice it to be empowered with the authority to, in essence, make the better society in my capability.</div>
-
-                            <div class="button first">READ MORE</div>
 						</div>
 					</div>
 					<div class="right">
@@ -196,7 +203,6 @@
 							<div class="text">Joan Yee is the Education Sector Advisor for Titan with a track record of managing and investing in education companies.
 
 							In addition to driving large, established education companies across Asia, Ms. Yee is also a serial entrepreneur.  She has founded companies not only in the education space, but also in the F&B and events management sectors.</div>
-                            <div class="button second">READ MORE</div>
 						</div>
 					</div>
 				</div>
@@ -206,7 +212,6 @@
 						<div class="content-container">
 							<div class="title">Taskin Haque</div>
 							<div class="text">.</div>
-                            <div class="button third">READ MORE</div>
 						</div>
 					</div>
 					<div class="right">
@@ -214,6 +219,17 @@
 					</div>
 				</div>
 
+				<div class="row">
+					<div class="left">
+						<div class="img four"></div>
+					</div>
+					<div class="right">
+						<div class="content-container">
+							<div class="title">Anas Brt</div>
+							<div class="text">Anas is an Ekamai International School alumnus and successful business owner of ther renowned restaurant Primal. His life experiences at the EIS, The Gilon Insitute and beyond shapes his mindset in starting a successful restaurant in the heart of bangkok.</div>
+						</div>
+					</div>
+				</div>
 
 
 			</div>
