--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 			<span>x</span>
 			<div class="pop-up-text">
 				<div class="flex-container">
-					<h1>Anas Brt</h1>
+					<h1>Anas Birouti</h1>
                     <img class="img-4" src="images/speakers/AnasBrt.png" alt="image four" />
 				</div>
 			</div>
