--- a/speakers.html
+++ b/speakers.html
@@ -225,7 +225,7 @@
 					</div>
 					<div class="right">
 						<div class="content-container">
-							<div class="title">Anas Brt</div>
+							<div class="title">Anas Birouti</div>
 							<div class="text">Anas is an Ekamai International School alumnus and successful business owner of ther renowned restaurant Primal. His life experiences at the EIS, The Gilon Insitute and beyond shapes his mindset in starting a successful restaurant in the heart of bangkok.</div>
 						</div>
 					</div>
